--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -23,6 +23,8 @@ MIN_COVERAGE?=47
 MAIN_PATH=
 
 SERVICE_DIR:=/kp/pkg
+SKIP_TRIVY=1
+SKIP_RETAG_MAIN_AS_PR=1
 include $(ROOT_DIR)/infrastructure/make/go/include.mk
 
 PKG_WITHOUT_DOCKER?=0
