--- a/.github/workflows/execution-plan-snippet.yml
+++ b/.github/workflows/execution-plan-snippet.yml
@@ -30,191 +30,11 @@ jobs:
       - name: Set version pr
         if: inputs.trigger == 'pull-request'
         run: |
-          echo '{
-            "stage_a": {
-              "steps": [
-                {
-                  "image": "docker:git",
-                  "command": "make -C infrastructure/docker/builder build-pr DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "artifacts": "",
-                  "artifactName": "Artifact_infrastructure_docker_builder",
-                  "directory": "infrastructure/docker/builder",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "docker:git",
-                  "command": "make -C infrastructure/docker/git-ssh build-pr DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=f28252ef84049ebb31c8cdf6f040a576da1b0bfd22ffe22ba2c6aaba0f8330a6",
-                  "artifacts": "",
-                  "artifactName": "Artifact_infrastructure_docker_git-ssh",
-                  "directory": "infrastructure/docker/git-ssh",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                }
-              ]
-            },
-            "stage_b": {
-              "steps": [
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/manifest-repo-export-service build-pr",
-                  "artifacts": "services/manifest-repo-export-service/coverage.html",
-                  "artifactName": "Artifact_services_manifest-repo-export-service",
-                  "directory": "services/manifest-repo-export-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/rollout-service build-pr",
-                  "artifacts": "services/rollout-service/coverage.html",
-                  "artifactName": "Artifact_services_rollout-service",
-                  "directory": "services/rollout-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C cli build-pr",
-                  "artifacts": "cli/coverage.html",
-                  "artifactName": "Artifact_cli",
-                  "directory": "cli",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C pkg build-pr",
-                  "artifacts": "pkg/coverage.html",
-                  "artifactName": "Artifact_pkg",
-                  "directory": "pkg",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/cd-service build-pr",
-                  "artifacts": "services/cd-service/coverage.html",
-                  "artifactName": "Artifact_services_cd-service",
-                  "directory": "services/cd-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/reposerver-service build-pr",
-                  "artifacts": "services/reposerver-service/coverage.html",
-                  "artifactName": "Artifact_services_reposerver-service",
-                  "directory": "services/reposerver-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/frontend-service build-pr",
-                  "artifacts": "services/frontend-service/coverage.html",
-                  "artifactName": "Artifact_services_frontend-service",
-                  "directory": "services/frontend-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                }
-              ]
-            }
-          }' > artifacts/github-convertor.json
+          ./infrastructure/scripts/execution-plan/plan-pr.sh > artifacts/github-convertor.json
       - name: Set version main
         if: inputs.trigger == 'main'
         run: |
-          echo '{
-            "stage_a": {
-              "steps": [
-                {
-                  "image": "docker:git",
-                  "command": "make -C infrastructure/docker/builder build-main DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "artifacts": "",
-                  "artifactName": "Artifact_infrastructure_docker_builder",
-                  "directory": "infrastructure/docker/builder",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "docker:git",
-                  "command": "make -C infrastructure/docker/git-ssh build-main DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=f28252ef84049ebb31c8cdf6f040a576da1b0bfd22ffe22ba2c6aaba0f8330a6",
-                  "artifacts": "",
-                  "artifactName": "Artifact_infrastructure_docker_git-ssh",
-                  "directory": "infrastructure/docker/git-ssh",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                }
-              ]
-            },
-            "stage_b": {
-              "steps": [
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/manifest-repo-export-service build-main",
-                  "artifacts": "services/manifest-repo-export-service/coverage.html",
-                  "artifactName": "Artifact_services_manifest-repo-export-service",
-                  "directory": "services/manifest-repo-export-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/rollout-service build-main",
-                  "artifacts": "services/rollout-service/coverage.html",
-                  "artifactName": "Artifact_services_rollout-service",
-                  "directory": "services/rollout-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C cli build-main",
-                  "artifacts": "cli/coverage.html",
-                  "artifactName": "Artifact_cli",
-                  "directory": "cli",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C pkg build-main",
-                  "artifacts": "pkg/coverage.html",
-                  "artifactName": "Artifact_pkg",
-                  "directory": "pkg",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/cd-service build-main",
-                  "artifacts": "services/cd-service/coverage.html",
-                  "artifactName": "Artifact_services_cd-service",
-                  "directory": "services/cd-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/reposerver-service build-main",
-                  "artifacts": "services/reposerver-service/coverage.html",
-                  "artifactName": "Artifact_services_reposerver-service",
-                  "directory": "services/reposerver-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                },
-                {
-                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
-                  "command": "make -C services/frontend-service build-main",
-                  "artifacts": "services/frontend-service/coverage.html",
-                  "artifactName": "Artifact_services_frontend-service",
-                  "directory": "services/frontend-service",
-                  "cachefiles": "",
-                  "cacheKey": ""
-                }
-              ]
-            }
-          }' > artifacts/github-convertor.json
+          ./infrastructure/scripts/execution-plan/plan-main.sh > artifacts/github-convertor.json
       - name: Print github converted plan
         run: |
           cat artifacts/github-convertor.json
@@ -235,7 +55,7 @@ jobs:
             artifacts/execution-plan.json
             artifacts/github-convertor.json
       - name: Split up plan into individual parts
-        id: testingabc
+        id: print-split-plan
         run: |
           echo "A: ${{ steps.splitplan.outputs.stage_a }} "
           echo "B: ${{ steps.splitplan.outputs.stage_b }} "
@@ -279,14 +99,6 @@ jobs:
           registry: europe-west3-docker.pkg.dev
           username: _json_key
           password: ${{ secrets.GCP_ARTIFACT_REGISTRY_PUSH_JSON_KEY }}
-      - name: Update cache
-        uses: actions/cache@v4
-        if: matrix.data.cachefiles != ''
-        with:
-          path: ${{ matrix.data.cachefiles }}
-          key: cache-${{ matrix.data.cacheKey }}
-          restore-keys: |
-            cache-${{ matrix.data.cacheKey }}
       - name: Pre build actions
         uses: ./.github/actions/pre-build-action
         with:
@@ -349,14 +161,6 @@ jobs:
           registry: europe-west3-docker.pkg.dev
           username: _json_key
           password: ${{ secrets.GCP_ARTIFACT_REGISTRY_PUSH_JSON_KEY }}
-      - name: Update cache
-        uses: actions/cache@v4
-        if: matrix.data.cachefiles != ''
-        with:
-          path: ${{ matrix.data.cachefiles }}
-          key: cache-${{ matrix.data.cacheKey }}
-          restore-keys: |
-            cache-${{ matrix.data.cacheKey }}
       - name: Pre build actions
         uses: ./.github/actions/pre-build-action
         with:
