fix: PR test: touch only builder
Ref: SRX-3FH1FA

--- a/infrastructure/docker/builder/Makefile
+++ b/infrastructure/docker/builder/Makefile
@@ -61,4 +61,4 @@ get-builder-image:
 	@echo "$(KUBERPULT_BUILDER)"
 
 retag-main:
-	@echo "Skipping retag-main"
+	@echo "Skipping retag-main: SVEN TEST PR"
