--- a/infrastructure/docker/builder/Dockerfile
+++ b/infrastructure/docker/builder/Dockerfile
@@ -4,6 +4,9 @@ FROM golang:1.24.2-alpine3.21
 COPY --from=buf /usr/local/bin/buf /usr/local/bin/buf
 
 RUN apk add --no-cache ca-certificates tzdata alpine-sdk go make pkgconfig build-base git tar npm sqlite sqlite-dev bash cmake g++ musl-dev openssl-dev python3 py3-pip libffi-dev curl libssh2-dev
+COPY ./install-libgit2.sh /tmp/install-libgit2.sh
+COPY ./gitconfig /etc/gitconfig
+RUN /tmp/install-libgit2.sh && rm /tmp/install-libgit2.sh
 RUN npm install -g pnpm@8.9.2
 
 ARG GO_CI_LINT_VERSION="v1.64.0"
