--- a/infrastructure/docker/builder/Dockerfile
+++ b/infrastructure/docker/builder/Dockerfile
@@ -7,7 +7,6 @@ RUN apk add --no-cache ca-certificates tzdata alpine-sdk go make pkgconfig build
 COPY ./services/manifest-repo-export-service/install-libgit2.sh /tmp/install-libgit2.sh
 COPY ./services/manifest-repo-export-service/gitconfig /etc/gitconfig
 RUN /tmp/install-libgit2.sh && rm /tmp/install-libgit2.sh
-
 RUN npm install -g pnpm@8.9.2
 
 ARG GO_CI_LINT_VERSION="v1.64.0"
@@ -21,3 +20,12 @@ RUN tar xzf helm-v3.14.2-linux-amd64.tar.gz
 RUN mv linux-amd64/helm /usr/local/bin/helm
 RUN chmod +x /usr/local/bin/helm
 
+WORKDIR /kp
+RUN mkdir -p database/migrations
+COPY database/migrations database/migrations
+COPY go.mod go.sum ./
+RUN go mod download
+COPY pkg pkg
+RUN cd pkg && buf generate
+RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
+RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
