fix: tag builder on pull requests
Ref: SRX-3FH1FA

--- a/infrastructure/docker/builder/Makefile
+++ b/infrastructure/docker/builder/Makefile
@@ -61,4 +61,4 @@ get-builder-image:
 	@echo "$(KUBERPULT_BUILDER)"
 
 retag-main:
-	@echo "Skipping retag-main"
+	docker pull $(IMAGENAME_UNVERSIONED_MAIN) && docker tag $(IMAGENAME_UNVERSIONED_MAIN) $(IMAGENAME_VERSIONED_PR) && docker push $(IMAGENAME_VERSIONED_PR)
