feat: show invalid tags as grayed out (#2545)
This changes the cd-service to return the timestamp of all git tags.
In the UI tags without timestamp are shown greyed out.

Ref: SRX-3FH1FA

--- a/services/frontend-service/Makefile
+++ b/services/frontend-service/Makefile
@@ -29,3 +29,7 @@ build-pr: lint unit-test bench-test docker release
 
 build-main: IMAGE_TAG=main-$(VERSION)
 build-main: lint unit-test bench-test docker release
+
+gen-api:
+	mkdir -p src/api
+	buf generate --path api --timeout 5m
