continue with lint, should work for pkg now

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,10 +6,13 @@ linters:
     - ineffassign
     - unused
     - asciicheck
-#  disable:
     - bodyclose
-    - staticcheck
     - copyloopvar
+  disable:
+    - staticcheck
 issues:
   max-same-issues: 0
   max-issues-per-linter: 0
+output:
+  format: tab # This is where you set the output format to 'tab'
+  sort-results: true # Equivalent to --sort-results
