fix: absolute path in make lint

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -39,7 +39,7 @@ ifeq ($(PKG_WITHOUT_DOCKER),1)
 	GOFLAGS="-buildvcs=false" golangci-lint run --timeout=15m -j4 --tests=false --skip-files=".*\.pb\.go$$" ./pkg/...
 else
 	@echo "Running in docker"
-	docker run --rm -w /kp/ -v "..:/kp/" $(BUILDER_IMAGE) sh -c 'GOFLAGS="-buildvcs=false" golangci-lint run --timeout=15m -j4 --tests=false --skip-files=".*\.pb\.go$$" ./pkg/...'
+	docker run --rm -w /kp/ -v "$(shell pwd)/..:/kp/" $(BUILDER_IMAGE) sh -c 'GOFLAGS="-buildvcs=false" golangci-lint run --timeout=15m -j4 --tests=false --skip-files=".*\.pb\.go$$" ./pkg/...'
 endif
 
 gen: grpc-api-gen publicapi
