feat: Allow release trains to push a git tag
This gives the release train endpoint a "gitTag" query parameter,
which the manifest-repo-export-service will use as a name for a git tag.

See new helm parameter: manifestRepoExport.failOnErrorWithGitPushTags
and new metric manifest_export_tag_push_failures.

Ref: SRX-YABX15

--- a/charts/kuberpult/templates/manifest-repo-export-service.yaml
+++ b/charts/kuberpult/templates/manifest-repo-export-service.yaml
@@ -237,6 +237,9 @@ spec:
           value: "{{ .Values.git.minimizeExportedData }}"
         - name: KUBERPULT_CHECK_CUSTOM_MIGRATIONS
           value: "{{ .Values.db.checkCustomMigrations }}"
+        - name: KUBERPULT_FAIL_ON_ERROR_WITH_GIT_PUSH_TAGS
+          value: {{ .Values.manifestRepoExport.failOnErrorWithGitPushTags | quote }}
+
 {{- if (and (.Values.db.gitTimestampMigrations.enabled) (not (.Values.reposerver.enabled))) }}
 {{ fail "If gitTimestampMigrations is enabled the reposerver should also be enabled" }}
 {{- end }}
