--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,7 @@ services:
       - DD_ENV=example-local-jul11-b
       - DD_AGENT_HOST=datadog-agent
       - KUBERPULT_ESL_PROCESSING_BACKOFF=1
+      - KUBERPULT_FAIL_ON_ERROR_WITH_GIT_PUSH_TAGS=true
     volumes:
       - ./services/cd-service:/kp/kuberpult
     ports:
