fix(builder): use cache image
Ref: SRX-VJQR2D

--- a/infrastructure/docker/builder/Makefile
+++ b/infrastructure/docker/builder/Makefile
@@ -22,9 +22,10 @@ IMAGENAME_VERSIONED=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:$(VERSI
 IMAGENAME_VERSIONED_PR=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:pr-$(VERSION)
 IMAGENAME_VERSIONED_MAIN=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:main-$(VERSION)
 IMAGENAME_UNVERSIONED_MAIN=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:main
+CACHEIMAGE?=
 
 build:
-	docker build -t $(IMAGENAME) -f Dockerfile ../../../
+	docker build --cache-from $(IMAGENAME_UNVERSIONED_MAIN) $(CACHEIMAGE) -t $(IMAGENAME) -f Dockerfile ../../../
 
 build-pr: build publish
 	echo "Building on pull request"
@@ -60,5 +61,8 @@ publish: release
 get-builder-image:
 	@echo "$(KUBERPULT_BUILDER)"
 
-retag-main:
-	docker pull $(IMAGENAME_UNVERSIONED_MAIN) && docker tag $(IMAGENAME_UNVERSIONED_MAIN) $(IMAGENAME_VERSIONED_PR) && docker push $(IMAGENAME_VERSIONED_PR)
+retag-main: pull-main
+	docker tag $(IMAGENAME_UNVERSIONED_MAIN) $(IMAGENAME_VERSIONED_PR) && docker push $(IMAGENAME_VERSIONED_PR)
+
+pull-main:
+	docker pull $(IMAGENAME_UNVERSIONED_MAIN)
