--- a/services/cd-service/Dockerfile
+++ b/services/cd-service/Dockerfile
@@ -1,24 +1,24 @@
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:main
 FROM ${BUILDER_IMAGE} as builder
 FROM alpine:3.21
-ARG CONTEXT
+ARG path=
 ENV TZ=Europe/Berlin
 RUN adduser --disabled-password --home "/kp" --uid 1000 kp
 RUN chown -R kp:kp /kp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
-COPY $CONTEXT/gitconfig /etc/gitconfig
-COPY $CONTEXT/policy.csv /etc/policy.csv
-COPY $CONTEXT/team.csv /etc/team.csv
+COPY services/cd-service/gitconfig /etc/gitconfig
+COPY services/cd-service/policy.csv /etc/policy.csv
+COPY services/cd-service/team.csv /etc/team.csv
 
-COPY $CONTEXT/cmd/server/lib/ /lib
-COPY $CONTEXT/cmd/server/usr/ /usr
+COPY services/cd-service/cmd/server/lib/ /lib
+COPY services/cd-service/cmd/server/usr/ /usr
 
 USER kp
 WORKDIR /kp
 RUN mkdir -p database/migrations
 COPY database/migrations /migrations
 
-COPY $CONTEXT/cmd/server/bin/main /main
+COPY services/cd-service/cmd/server/bin/main /main
 
 CMD /main
