fix(builder): fix cache export
Ref: SRX-VJQR2D

--- a/infrastructure/docker/builder/Makefile
+++ b/infrastructure/docker/builder/Makefile
@@ -25,7 +25,7 @@ IMAGENAME_UNVERSIONED_MAIN=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:
 CACHEIMAGE?=
 
 build:
-	docker buildx build --cache-from type=registry,ref=$(IMAGENAME_UNVERSIONED_MAIN) --cache-to type=registry,ref=$(IMAGENAME_UNVERSIONED_MAIN) -t $(IMAGENAME) -f Dockerfile ../../../
+	docker buildx build --cache-from type=registry,ref=$(IMAGENAME_UNVERSIONED_MAIN) -t $(IMAGENAME) -f Dockerfile ../../../
 
 build-pr: pull-main build publish
 	echo "Building on pull request"
