--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -28,7 +28,7 @@ SKIP_RETAG_MAIN_AS_PR=1
 include $(ROOT_DIR)/infrastructure/make/go/include.mk
 
 PKG_WITHOUT_DOCKER?=0
-PKG_VOLUME=""
+PKG_VOLUME=
 
 all: gen lint test
 test: gen unit-test
