--- a/.github/workflows/execution-plan-snippet.yml
+++ b/.github/workflows/execution-plan-snippet.yml
@@ -141,6 +141,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install Buf
+        uses: bufbuild/buf-action@v1
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          version: '1.47.2'
+          setup_only: true
       - name: Set version pr/main
         if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
         run: |
