--- a/services/reposerver-service/Dockerfile
+++ b/services/reposerver-service/Dockerfile
@@ -3,21 +3,30 @@ FROM ${BUILDER_IMAGE} AS builder
 FROM alpine:3.21
 ENV TZ=Europe/Berlin
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
-RUN adduser --disabled-password --home "/kp" --uid 1000 kp
-RUN chown -R kp:kp /kp
+COPY --from=builder /usr/local/go /usr/local/go
+ENV PATH="/usr/local/go/bin:/kp/go/bin:${PATH}"
+
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
+
 
 COPY ./services/reposerver-service/cmd/server/lib/ /lib
 COPY ./services/reposerver-service/cmd/server/usr/ /usr
 
-USER kp
+
 WORKDIR /kp
 COPY ./services/reposerver-service/cmd/server/bin/main /main
+COPY --from=builder /kp/go.mod ./go.mod
+COPY --from=builder /kp/go.sum ./go.sum
 
 COPY pkg pkg
 RUN cd pkg && buf generate
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
-RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
+RUN mkdir -p /kp/pkg/publicapi
+RUN cd /kp/pkg && oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
+
+RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+RUN chown -R kp:kp /kp
+USER kp
 
 CMD /main
