--- a/services/cd-service/Dockerfile
+++ b/services/cd-service/Dockerfile
@@ -25,7 +25,7 @@ COPY database/migrations /migrations
 
 COPY services/cd-service/cmd/server/bin/main /main
 
-COPY pkg pkg
+COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
