--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -25,7 +25,7 @@ RUN mkdir -p database/migrations
 COPY database/migrations /migrations
 COPY services/manifest-repo-export-service/cmd/server/bin/main /main
 
-COPY pkg pkg
+COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
 
