--- a/services/frontend-service/Dockerfile
+++ b/services/frontend-service/Dockerfile
@@ -50,7 +50,7 @@ COPY --from=builder /kp/services/frontend-service/build /build
 COPY --from=builder /kp/go.mod /go.mod
 COPY --from=builder /kp/go.sum /go.sum
 
-COPY pkg pkg
+COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
