fixing base image for pkg

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -71,7 +71,11 @@ clean:
 	rm -f publicapi/$(GO_SERVER_GEN)
 proto: api/v1/api_grpc.pb.go publicapi
 
+build-pr: IMAGE_TAG=pr-$(VERSION)
+build-pr: BUILDER_IMAGE=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:pr-$(VERSION)
 build-pr: all
+
+build-main: IMAGE_TAG=main-$(VERSION)
 build-main: all
 
 .PHONY: all clean release test
